v8/tests/messages/property-store-init.out
property-store-init.js:1: Uncaught TypeError: Cannot set property 'x' of null
null.x = 4;
       ^
